# cdm_satelite

./: .gitignore  CMakeLists.txt  gps_sequence_3.txt  main.cpp
include/: Controller.h  FileLoader.h  GoldCodeGenerator.h  Processor.h  SatelliteConfig.h
src/: Controller.cpp  FileLoader.cpp  GoldCodeGenerator.cpp  Processor.cpp
